// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabsRow /> should hide monitoring tab if needed (eg. when we archive a cluster) 1`] = `
<Component
  activeKey={0}
  onSelect={[Function]}
>
  <Tab
    eventKey={0}
    key="0"
    tabContentId="overviewTabContent"
    tabContentRef={
      Object {
        "current": null,
      }
    }
    title="Overview"
  />
</Component>
`;

exports[`<TabsRow /> should render 1`] = `
<Component
  activeKey={0}
  onSelect={[Function]}
>
  <Tab
    eventKey={0}
    key="0"
    tabContentId="overviewTabContent"
    tabContentRef={
      Object {
        "current": null,
      }
    }
    title="Overview"
  />
  <Tab
    eventKey={1}
    key="1"
    tabContentId="monitoringTabContent"
    tabContentRef={
      Object {
        "current": null,
      }
    }
    title="Monitoring"
  />
</Component>
`;
